--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
+    "axios": "^1.7.9",
     "glob": "^11.0.0",
     "lru-cache": "^11.0.0",
     "react": "^18.3.1",
